--- a/numba/annotations/template.html
+++ b/numba/annotations/template.html
@@ -52,24 +52,25 @@ window.onload = function() {
 
 %for func_id, func_key in enumerate(func_data):
 
-document.getElementById('func{{func_id}}_toggle_llvm').onclick = function() {
-    if (this.innerHTML == 'show llvm') {
-        var llvm_lines = document.getElementsByClassName('func{{func_id}}_llvm');
-        for (var i = 0; i < llvm_lines.length; i++) {
-            llvm_lines[i].setAttribute('class', 'llvm_code func{{func_id}}_llvm');
+    <%func_id_str = str(func_id)%>
+    document.getElementById('func{{func_id_str}}_toggle_llvm').onclick = function() {
+        if (this.innerHTML == 'show llvm') {
+            var llvm_lines = document.getElementsByClassName('func{{func_id_str}}_llvm');
+            for (var i = 0; i < llvm_lines.length; i++) {
+                llvm_lines[i].setAttribute('class', 'llvm_code func{{func_id_str}}_llvm');
+            }
+            this.innerHTML = 'hide llvm'
         }
-        this.innerHTML = 'hide llvm'
-    }
-    else {
-        var llvm_lines = document.getElementsByClassName('func{{func_id}}_llvm');
-        for (var i = 0; i < llvm_lines.length; i++) {
-            llvm_lines[i].setAttribute('class', 'llvm_code func{{func_id}}_llvm hidden');
+        else {
+            var llvm_lines = document.getElementsByClassName('func{{func_id_str}}_llvm');
+            for (var i = 0; i < llvm_lines.length; i++) {
+                llvm_lines[i].setAttribute('class', 'llvm_code func{{func_id_str}}_llvm hidden');
+            }
+            this.innerHTML = 'show llvm'
         }
-        this.innerHTML = 'show llvm'
     }
-}
 
-%endfor
+    %endfor
 
 }
 </script>
@@ -80,6 +81,7 @@ document.getElementById('func{{func_id}}_toggle_llvm').onclick = function() {
 
     %for func_id, func_key in enumerate(func_data):
 
+        <%func_id_str = str(func_id)%>
         <div class="metadata">
         Function name: {{func_data[func_key]['funcname']}}<br />
         in file: {{func_data[func_key]['filename']}}<br />
@@ -89,15 +91,16 @@ document.getElementById('func{{func_id}}_toggle_llvm').onclick = function() {
 
         <div class="annotations">
 
-        <span id="func{{func_id}}_toggle_llvm" class="buttons">show llvm</span>
+        <span id="func{{func_id_str}}_toggle_llvm" class="buttons">show llvm</span>
 
         <table class="annotation_table">
 
             %for num, line in func_data[func_key]['python_lines'].items():
                 <tr>
                 
+                    <%num_str = str(num)%>
                     <td class="{{func_data[func_key]['python_object'][num]}}">
-                    {{num}}:
+                    {{num_str}}:
                     </td>
 
                     <td class="{{func_data[func_key]['python_object'][num]}}">
@@ -108,7 +111,7 @@ document.getElementById('func{{func_id}}_toggle_llvm').onclick = function() {
 
                 %for i, llvm_line in enumerate(func_data[func_key]['llvm_lines'][num]):
 
-                    <tr class="llvm_code func{{func_id}}_llvm hidden">
+                    <tr class="llvm_code func{{func_id_str}}_llvm hidden">
 
                         <td>&nbsp;</td>
 
