--- a/numba/annotations/template.html
+++ b/numba/annotations/template.html
@@ -92,7 +92,6 @@ window.onload = function() {
         <div class="metadata">
         Function name: {{func_data[func_key]['funcname']}}<br />
         in file: {{func_data[func_key]['filename']}}<br />
-        called from: {{func_key[0]}}<br />
         with signature: {{func_key[1]}}
         </div>
 
@@ -102,20 +101,20 @@ window.onload = function() {
 
         <table class="annotation_table">
 
-            {% for num, line in func_data[func_key]['python_lines'].items() %}
+            {% for num, line in func_data[func_key]['python_lines'] %}
                 <tr>
                 
-                    <td class="{{func_data[func_key]['python_object'][num]}}">
+                    <td class="{{func_data[func_key]['python_tags'][num]}}">
                     {{num}}:
                     </td>
 
-                    <td class="{{func_data[func_key]['python_object'][num]}}">
+                    <td class="{{func_data[func_key]['python_tags'][num]}}">
                     {{func_data[func_key]['python_indent'][num]}}{{line}}
                     </td>
                 
                 </tr>
 
-                {% for llvm_line in func_data[func_key]['llvm_lines'][num] %}
+                {% for llvm_line, llvm_line_type in func_data[func_key]['llvm_lines'][num] %}
 
                     <tr class="llvm_code func{{loop1.index}}_llvm hidden">
 
@@ -124,6 +123,7 @@ window.onload = function() {
                         <td>
                         {{func_data[func_key]['python_indent'][num]}}
                         {{func_data[func_key]['llvm_indent'][num][i]}}{{llvm_line}}
+                        <span class="object_tag">{{llvm_line_type}}</span>
                         </td>
 
                     </tr>
