--- a/numba/annotations/template.html
+++ b/numba/annotations/template.html
@@ -20,7 +20,7 @@ color: #00cc33;
 font-weight: bold;
 }
 
-.llvm_code {
+.ir_code {
 color: grey;
 font-style: italic;
 }
@@ -58,20 +58,20 @@ window.onload = function() {
 
 {% for func_key in func_data.keys() %}
 
-    $('#func{{loop.index}}_toggle_llvm')[0].onclick = function() {
-        if (this.innerHTML == 'show llvm') {
-            var llvm_lines = $('.func{{loop.index}}_llvm')
-            for (var i = 0; i < llvm_lines.length; i++) {
-                llvm_lines[i].setAttribute('class', 'llvm_code func{{loop.index}}_llvm');
+    $('#func{{loop.index}}_toggle_ir')[0].onclick = function() {
+        if (this.innerHTML == 'show numba IR') {
+            var ir_lines = $('.func{{loop.index}}_ir')
+            for (var i = 0; i < ir_lines.length; i++) {
+                ir_lines[i].setAttribute('class', 'ir_code func{{loop.index}}_ir');
             }
-            this.innerHTML = 'hide llvm'
+            this.innerHTML = 'hide numba IR'
         }
         else {
-            var llvm_lines = $('.func{{loop.index}}_llvm')
-            for (var i = 0; i < llvm_lines.length; i++) {
-                llvm_lines[i].setAttribute('class', 'llvm_code func{{loop.index}}_llvm hidden');
+            var ir_lines = $('.func{{loop.index}}_ir')
+            for (var i = 0; i < ir_lines.length; i++) {
+                ir_lines[i].setAttribute('class', 'ir_code func{{loop.index}}_ir hidden');
             }
-            this.innerHTML = 'show llvm'
+            this.innerHTML = 'show numba IR'
         }
     }
 
@@ -97,7 +97,7 @@ window.onload = function() {
 
         <div class="annotations">
 
-        <span id="func{{loop1.index}}_toggle_llvm" class="buttons">show llvm</span>
+        <span id="func{{loop1.index}}_toggle_ir" class="buttons">show numba IR</span>
 
         <table class="annotation_table">
 
@@ -114,16 +114,16 @@ window.onload = function() {
                 
                 </tr>
 
-                {% for llvm_line, llvm_line_type in func_data[func_key]['llvm_lines'][num] %}
+                {% for ir_line, ir_line_type in func_data[func_key]['ir_lines'][num] %}
 
-                    <tr class="llvm_code func{{loop1.index}}_llvm hidden">
+                    <tr class="ir_code func{{loop1.index}}_ir hidden">
 
                         <td>&nbsp;</td>
 
                         <td>
                         {{func_data[func_key]['python_indent'][num]}}
-                        {{func_data[func_key]['llvm_indent'][num][i]}}{{llvm_line}}
-                        <span class="object_tag">{{llvm_line_type}}</span>
+                        {{func_data[func_key]['ir_indent'][num][i]}}{{ir_line}}
+                        <span class="object_tag">{{ir_line_type}}</span>
                         </td>
 
                     </tr>
