--- a/numba/annotations/template.html
+++ b/numba/annotations/template.html
@@ -92,7 +92,7 @@ window.onload = function() {
         <div class="metadata">
         Function name: {{func_data[func_key]['funcname']}}<br />
         in file: {{func_data[func_key]['filename']}}<br />
-        with signature: {{func_key[1]}}
+        with signature: {{func_key[1]|e}}
         </div>
 
         <div class="annotations">
@@ -109,7 +109,7 @@ window.onload = function() {
                     </td>
 
                     <td class="{{func_data[func_key]['python_tags'][num]}}">
-                    {{func_data[func_key]['python_indent'][num]}}{{line}}
+                    {{func_data[func_key]['python_indent'][num]}}{{line|e}}
                     </td>
                 
                 </tr>
@@ -122,7 +122,7 @@ window.onload = function() {
 
                         <td>
                         {{func_data[func_key]['python_indent'][num]}}
-                        {{func_data[func_key]['ir_indent'][num][loop.index0]}}{{ir_line}}
+                        {{func_data[func_key]['ir_indent'][num][loop.index0]}}{{ir_line|e}}
                         <span class="object_tag">{{ir_line_type}}</span>
                         </td>
 
